# snapMusic

./: .gitignore  README.md
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/jimmyhalimi/snapmusic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/datasets/: README.MD
app/src/main/cpp/: img_processor.cpp  native-lib.cpp
app/src/main/cpp/include/: img_processor.h  native-lib.h
app/src/main/java/com/example/jimmyhalimi/snapmusic/: Home.java  Image.java  ImageProcessingThread.java  MainPage.java  ObservableBoolean.java  Settings.java  TopFragment.java  image_processing_listener.java  image_processing_thread.java
app/src/main/res/drawable/: ic_camera.xml  ic_flash_off.xml  ic_flash_on.xml  ic_gallery.xml  side_nav_bar.xml
app/src/main/res/layout/: activity_home.xml  activity_image.xml  activity_settings.xml  app_bar_user.xml  content_user.xml  fragment_top.xml  main_page.xml  nav_header_user.xml
app/src/main/res/menu/: drawer.xml  menu.xml  menu_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/example/jimmyhalimi/snapmusic/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
img_proc/: CMakeLists.txt
img_proc/RGB_to_oRGB/src/: color_adjustment.cpp  color_adjustment.h  convert_colorspace.cpp  convert_colorspace.h  main.cpp
img_proc/RGB_to_oRGB/test_src/: test_convert_colorspace.cpp  test_convert_colorspace.h  test_main.cpp
src/: build.gradle
src/src/main/: AndroidManifest.xml
(+3 files in other folders)
